added tanaporta integration with CLI

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 OPERATIONS_API_TOKEN=
 API_BASE_URL=
+TANAPORTA_USER=
+TANAPORTA_KEY=
+LOGGI_COMPANY_ID=
+LOGGI_CLIENT_SECRET=
+LOGGI_CLIENT_ID=
+CNPJA_API_KEY=
